--- a/app/design/frontend/base/default/template/sales/order/history.phtml
+++ b/app/design/frontend/base/default/template/sales/order/history.phtml
@@ -47,7 +47,7 @@ f
                 </div>
                 <?php echo $this->getPagerHtml(); ?>
                 <?php if($_orders->getSize()): ?>
-                    <table class="data-table" id="my-orders-table">
+                    <table class="club_giftcardtable" id="my-orders-table">
                         <col width="1" />
                         <col width="1" />
                         <col />
