--- a/app/design/frontend/base/default/template/customer/orders.phtml
+++ b/app/design/frontend/base/default/template/customer/orders.phtml
@@ -32,7 +32,7 @@
     <h1><?php echo $this->__('My Orders') ?></h1>
 </div>
 <?php if($orders->getSize()): ?>
-<table class="data-table" id="my-orders-table" >
+<table class="club_giftcardtable" id="my-orders-table" >
     <thead>
         <tr>
             <th><?php echo $this->__('Order #') ?></th>
