--- a/app/design/frontend/base/default/template/points/order/items.phtml
+++ b/app/design/frontend/base/default/template/points/order/items.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php  $_order = $this->getOrder() ?>
-<table class="data-table" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
+<table class="club_giftcardtable" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
     <col width="1" />
     <col width="1" />
     <col width="1" />
@@ -44,7 +44,7 @@
 		<?php if($this->getShippingFee() != 0):?>
 		<tr><td colspan="4" class="last a-right">运费:<?php echo $this->getShippingFee(); ?>积分</td></tr>
 		<?php endif; ?>
-		<tr><td colspan="4" class="last a-right">数量合计:<?php echo $this->getTotalQty(); ?> 积分合计:<?php echo $this->getTotalPoints(); ?></td></tr>
+		<tr><td colspan="4" class="last a-right">数量合计:<?php echo $this->getTotalQty(); ?> &nbsp;&nbsp;&nbsp;&nbsp;积分合计:<?php echo $this->getTotalPoints(); ?></td></tr>
     </tfoot>
 	<tbody>
         <?php $_items = $_order->getItemsCollection(); ?>
