--- a/app/design/frontend/default/iphone/template/sales/order/items.phtml
+++ b/app/design/frontend/default/iphone/template/sales/order/items.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php  $_order = $this->getOrder() ?>
-<table class="data-table" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
+<table class="club_giftcardtable" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
     <tfoot>
         <?php echo $this->getChildHtml('order_totals') ?>
     </tfoot>
