--- a/app/design/frontend/default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/list.phtml
@@ -39,14 +39,12 @@
 <!--  -->
     <!--  -->
     <div class="club_login">
-        <div class="club_tit ">
-            <h2><?php echo $this->__("Point<br />Exchange")?></h2>
-        </div>
         <div class="club_ecoupon_center cs-clear">
             <?php echo $this->getChildHtml("lily_product_nav")?>
             <div class="club_ecoupon_com club_point">
                 <div class="cs-clear ">
                     <div class="club_pointexnav cs-clear">
+                        礼品目录
                         <div class="club_pointexfilter">
                             <p class="club_pointexfiltertit"><?php echo $this->__("FILTER")?>:</p>
                             <p class="club_pointexselbox">
