--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -33,20 +33,25 @@
 ?>
 <div class="page page_club">
     <div class="club_member_formte">
-            <div class="club_tit  club_login_tit">
-                <h2><?php echo $this->__('MEMBER<br>REGISTRATION') ?></h2>
-            </div>
             <div class="club_member_rule">
+                <div class="club_tit  club_login_tit">
+                    <h2><?php echo $this->__('VIP TERMS') ?></h2>
+                </div>
                 <div class="club_login_txt">
-                    <?php echo $this->__('Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
+                    <?php echo $this->__('Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
                 </div>
                 <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('club-rule')->toHtml(); ?>
                 <button id="register-button" class="club_member_rulelink" title="<?php echo $this->__('Agree to the terms and sign up')?>" type="button"><span><span><?php echo $this->__('Agree to the terms and sign up.')?></span></span></button>
             </div>
 
             <div class="club-rule-content hide">
+
+                <div class="club_tit  club_login_tit register_tit">
+                    <h2><?php echo $this->__('Welcome be lily fans') ?></h2>
+                </div>
                 <div class="club_login_txt">
-                    <?php echo $this->__('Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
+
+                    <?php echo $this->__('Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
                 </div>
             <?php echo $this->getChildHtml('form_fields_before')?>
             <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
@@ -60,77 +65,79 @@
                     <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
 
                         <div class="club_memberreg_fi club_memberreg_fi_code cs-clear">
-                            <label><?php echo $this->__('Cell Phone') ?></label>
-                            <input class="club_login_ipt required-entry" required-entry" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->__('Cell Phone') ?>"  placeholder="<?php echo $this->__('Cell Phone') ?>*" />
+                            <label><?php echo $this->__('Mobile') ?></label>
+                            <input class="club_login_ipt required-entry" required-entry" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->__('Mobile') ?>"  />
                             <span class="club_memberreg_tips"><button type="button" title="<?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?>" class="club_member_sub club_member_sub2" id="get_code"><span><span><?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?></span></span></button></span>
                         </div>
 
                         <div class="club_memberreg_fi club_memberreg_fi_code cs-clear">
-                            <label><?php echo $this->__('Verifying Code') ?></label>
-                            <input class="club_login_ipt required-entry" id="verify_code" name="verify_code"  title="<?php echo $this->__('Verifying Code') ?>"  placeholder="<?php echo $this->__('Verifying Code') ?>* " />
+                            <label><?php echo $this->__('Verifying code') ?></label>
+                            <input class="club_login_ipt required-entry" id="verify_code" name="verify_code"  title="<?php echo $this->__('Verifying code') ?>"   />
                             <span class="club_memberreg_tips"><button type="button" title="<?php echo $this->__('Verify Code') ?>" class="club_member_sub club_member_sub2" id="verfir"><span><span><?php echo $this->__('Verify Code') ?></span></span></button></span>
                         </div>
 
 
-                        <div class="club_memberreg_fi cs-clear">
-                            <label><?php echo $this->__('Email Address') ?></label>
-                            <input type="text" name="email" id="email_address" placeholder="<?php echo $this->__('Email Address') ?>*" value="<?php echo $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="club_login_ipt validate-email required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('The email address is essential to contact with you, please fill in correctly.')?></span>
-                        </div>
 
-                        <div class="club_memberreg_fi cs-clear">
-                            <label><?php echo $this->__('Password') ?></label>
-                            <input type="password" name="password" id="password" placeholder="<?php echo $this->__('Password') ?>*" title="<?php echo $this->__('Password') ?>" class="club_login_ipt required-entry validate-password" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('6 to 16 characters')?></span>
-                        </div>
-
-                        <div class="club_memberreg_fi cs-clear">
-                            <label><?php echo $this->__('Confirm Password') ?></label>
-                            <input type="password" name="confirmation" id="confirmation" placeholder="<?php echo $this->__('Confirm Password') ?>*" title="<?php echo $this->__('Confirm Password') ?>" class="club_login_ipt required-entry validate-cpassword" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please input again')?></span>
-                        </div>
 
 
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Name') ?></label>
-                            <input type="text" name="firstname" id="firstname" placeholder="<?php echo $this->__('Name') ?>*" value="" title="<?php echo $this->__('Name') ?>" class="club_login_ipt required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get benefits')?></span>
+                            <input type="text" name="firstname" id="firstname" value="" title="<?php echo $this->__('Name') ?>" class="club_login_ipt required-entry" />
+                            <span class="club_memberreg_tips"></span>
                         </div>
 
-                        <div class="club_memberreg_fi cs-clear">
+
+                    <div class="club_memberreg_fi cs-clear">
+                        <label><?php echo $this->__('Gender') ?></label>
+                        <select name="gender" id="gender" class="club_login_ipt required-entry">
+                            <option value="123"><?php echo $this->__("Male")?></option>
+                            <option value="124"><?php echo $this->__("Female")?></option>
+                        </select>
+
+                        <span class="club_memberreg_tips"></span>
+                    </div>
+
+
+                    <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Birthday') ?></label>
-                            <input type="text" name="dob" id="birth" placeholder="<?php echo $this->__('Birthday') ?>*" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get a birthday benefit')?> (ex, 1988-02-24)</span>
+                            <input type="text" name="dob" id="birth" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
+                            <span class="club_memberreg_tips"><?php echo $this->__('e.g: 19850101')?></span>
                         </div>
 
-                        <div class="club_memberreg_fi cs-clear">
+
+                    <div class="club_memberreg_fi cs-clear">
+                        <label><?php echo $this->__('Email Address') ?></label>
+                        <input type="text" name="email" id="email_address" value="<?php echo $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="club_login_ipt validate-email required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('e.g: ABC@QQ.COM')?></span>
+                    </div>
+
+
+                    <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Address') ?></label>
-                            <input type="hidden" name="customer_address" id="customer_address" placeholder="<?php echo $this->__('Address') ?>*" value="" title="<?php echo $this->__('Address') ?>" class="club_login_ipt required-entry" />
-                            <input type="text" name="province" placeholder="<?php echo $this->__("Province")?>" class="club_login_ipt club_login_ipt_short required-entry" /> 省
-                            <input type="text" name="city" placeholder="<?php echo $this->__("City")?>" class="club_login_ipt club_login_ipt_short required-entry" /> 市
-                            <input type="text" name="district" placeholder="<?php echo $this->__("District")?>" class="club_login_ipt club_login_ipt_short required-entry" /> 区
-                            <input type="text" name="extra" placeholder="<?php echo $this->__("Address")?>" class="club_login_ipt club_login_ipt_address required-entry" />
+                            <input type="hidden" name="customer_address" id="customer_address" value="" title="<?php echo $this->__('Address') ?>" class="club_login_ipt required-entry" />
+                            <input type="text" name="province" class="club_login_ipt club_login_ipt_short required-entry" /> 省
+                            <input type="text" name="city" class="club_login_ipt club_login_ipt_short required-entry" /> 市
+                            <input type="text" name="district" class="club_login_ipt club_login_ipt_short required-entry" /> 区
+                            <input type="text" name="extra" class="club_login_ipt club_login_ipt_address required-entry" />
 
-                        </div>
-
-                        <div class="club_memberreg_fi cs-clear">
-                            <label><?php echo $this->__('Gender') ?></label>
-                            <select name="gender" id="gender" placeholder="<?php echo $this->__('Gender') ?>*" class="club_login_ipt required-entry">
-                                <option value="123"><?php echo $this->__("Male")?></option>
-                                <option value="124"><?php echo $this->__("Female")?></option>
-                            </select>
-
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please select gender')?></span>
                         </div>
 
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('ZIP/Post Code') ?></label>
-                            <input type="text" name="customer_zip" id="customer_zip" placeholder="<?php echo $this->__('ZIP/Post Code') ?>*" value="" title="<?php echo $this->__('ZIP/Post Code') ?>" class="club_login_ipt required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get benefits')?></span>
+                            <input type="text" name="customer_zip" id="customer_zip" value="" title="<?php echo $this->__('ZIP/Post Code') ?>" class="club_login_ipt required-entry" />
+                            <span class="club_memberreg_tips"></span>
                         </div>
 
-                        <div class="club_memberreg_fi club_memberreg_edm cs-clear">
-                            <?php echo $this->__('Sign Up for Newsletter') ?> <input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" id="is_subscribed" class="checkbox" />
+                        <div class="club_memberreg_fi cs-clear">
+                            <label><?php echo $this->__('Password') ?></label>
+                            <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="club_login_ipt required-entry validate-password" />
+                            <span class="club_memberreg_tips club_memberreg_tips_password"><?php echo $this->__('Please enter password')?></span>
+                        </div>
+
+                        <div class="club_memberreg_fi cs-clear">
+                            <label><?php echo $this->__('Confirm Password') ?></label>
+                            <input type="password" name="confirmation" id="confirmation" title="<?php echo $this->__('Confirm Password') ?>" class="club_login_ipt required-entry validate-cpassword" />
+                            <span class="club_memberreg_tips"></span>
                         </div>
 
 
