--- a/app/design/frontend/default/default/layout/page.xml
+++ b/app/design/frontend/default/default/layout/page.xml
@@ -41,6 +41,7 @@ Default layout, loads most of the pages
                 <action method="addJs"><script>prototype/prototype.js</script></action>
                 <action method="addJs"><script>lib/ccard.js</script></action>
                 <action method="addJs"><script>prototype/validation.js</script></action>
+                <action method="addJs"><script>lily/selectordie.min.js</script></action>
                 <action method="addJs"><script>scriptaculous/builder.js</script></action>
                 <action method="addJs"><script>scriptaculous/effects.js</script></action>
                 <action method="addJs"><script>scriptaculous/dragdrop.js</script></action>
