--- a/app/design/frontend/default/default/template/page/html/lily_customer_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_customer_nav.phtml
@@ -20,6 +20,10 @@
         <!-- <a href="#" class="club_giftcardcheckout">CHECK OUT</a> -->
         <a href="<?php echo $this->getUrl("giftproducts.html")?>" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
     </div>
+    <div class="club_opening_time">
+        会员热线：4008-91-9135<br />
+        工作日：10:00-18:00
+    </div>
 </div>
 
 <div class="club_ecoupon_nav_m">
