--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -4,6 +4,7 @@
 
 /**/
 * {max-height: 5000em;}
+address {font-style: normal;}
 .club{background: #f3dedd;}
 .page_club{padding: 120px 0 50px 0;background: #f3dedd;font-size:14px;}
 .page_club input {background:none;border:1px solid #000;}
@@ -11,10 +12,13 @@
 .page_club a:hover {text-decoration: underline;}
 .club_tit,.page-title h1{font-size: 60px;line-height:68px;text-transform:uppercase;text-align: center;padding:0 0 50px;}
 .club_tit .small {font-size:40px;}
+.register_tit {padding:0;}
+.register_tit h2 {font-size:30px;}
 .club_bottom_nav {text-align: center;margin-top:50px;}
 .club_bottom_nav li {display: inline-block;margin:0 10px;}
 .club_login{}
 .club_login_tit{}
+.club_login_tit_small {text-transform: none;}
 .club_login_txt{}
 .club_login_txt p{font-size: 24px;text-transform:uppercase;line-height: 50px}
 .club_login_regbtn{display: block;background: #000;color:#fff;width: 194px;height: 48px;line-height: 48px;margin:60px auto 20px;text-align: center;}
@@ -51,7 +55,8 @@
 .club_memberreg_fi .club_login_ipt{margin:0 auto;display:inline-block;float:none;}
 .club_memberreg_fi .club_login_ipt_short {width:80px;}
 .club_memberreg_fi{position: relative;}
-.club_memberreg_tips{position: absolute;left:350px;line-height: 48px;top:0;width:300px;color:#000;}
+.club_memberreg_tips{position: absolute;left:350px;line-height: 48px;top:0;width:350px;color:#000;}
+.club_memberreg_tips_password {width:600px;}
 .club_memberreg_seltxt{width: 200px;height: 46px;border:#000 solid 1px;padding:0 16px;margin: 0 auto;color:#000;font-family:arial;background: #f3dedd;line-height: 46px;background: url('../images/club_memberreg_sel.png') no-repeat 94% 50%;}
 .club_memberreg_sel{position: absolute;width: 232px;height: 46px;display: block;top: 1px;left:38px;opacity: 0;filter:alpha(opacity=0);cursor: pointer;}
 .club_member_forget{width: 308px;margin: 0 auto 0 auto;text-align:center;}
@@ -121,7 +126,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .club_meminfolist2 li{width: 300px;overflow: hidden;float: left;padding-bottom: 30px}
 .club_meminfolist li span{float: left;width: 150px;}
 .club_meminfolist li strong{float: left;width: 198px;}
-.club_meminfolist li span.edit {width:60px;}
+.club_meminfolist li span.edit {width:auto;border-bottom:2px solid #000;font-weight: bold;}
 .club_meminfolist input {background:none;border:1px solid #000;padding:4px;}
 .club_meminfolist button {background:#000;color:#fff;border:none;padding:4px;}
 .club_meminfolist2 li strong{float: left;width: 130px;}
@@ -175,7 +180,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 #points_checkout_form .form-list li label {font-size:14px;color:#000;font-weight: normal;}
 #points_checkout_form .form-list li label em {display:none;}
 #points_checkout_form h2 {font-size:14px;margin-bottom:15px;}
-#billing-new-address-form textarea {border:1px solid #000;background:none;resize:none;}
+#billing-new-address-form textarea {border:1px solid #000;background:none;resize:none;width:344px;}
 #checkout-points-review {margin:0 0 40px 0;}
 .blank_table_header {background: #d1beba;height:40px;}
 .points-checkout-index .points-summary {float:right;font-size:12px;}
