--- a/app/design/frontend/base/default/template/points/wishlist/item/column/cart.phtml
+++ b/app/design/frontend/base/default/template/points/wishlist/item/column/cart.phtml
@@ -30,5 +30,5 @@ $item = $this->getItem();
 $product = $item->getProduct();
 ?>
 <div class="cart-cell">
-	<?php echo $item->getAddedAt(); ?>
+	<?php echo date("Y-m-d", strtotime($item->getAddedAt())); ?>
 </div>
