--- a/app/design/frontend/base/default/template/points/shipping.phtml
+++ b/app/design/frontend/base/default/template/points/shipping.phtml
@@ -22,7 +22,39 @@
 		</li>
 		<?php  ?>
 	</ul>
-<div class="content-wrapper address-list hideme">
+
+	<div id="custom_address_con">
+		
+	</div>
+
+	<div class="shipping_addition" style="display:none;">
+		<div class="mentioning_shops">
+			<ul class="form-list">
+				<li>
+					<?php $citys = $this->getCitys(); ?>
+					<select name="store_city" id="store_city" class="required-entry">
+						<option value=""><?php echo $this->__('Please Select City'); ?></option>
+						<?php foreach($citys as $city): ?>
+							<option value="<?php echo $city; ?>"><?php echo $city; ?></option>
+						<?php endforeach; ?>
+					</select>
+				</li>
+				<li>
+					<select name="store_area" id="store_area" class="required-entry"><option value=""><?php echo $this->__('Please Select Area'); ?></option></select>
+				</li>
+				<li>
+					<select name="store_store" id="store_store" class="required-entry"><option value=""><?php echo $this->__('Please Select Store'); ?></option></select>
+				</li>
+			</ul>			
+		</div>
+	</div>
+</div>
+
+<div class="content"><?php echo $this->__('Warm tips:')?><?php echo $this->__('As the quantity of the gift is changing all the time , exchanging result is only associated with the success status of the order.')?></div>
+</div>
+
+<script type="text/template" id="tpl_custom_address">
+<div class="content-wrapper address-list">
 	<div class="content">
 	<div class="express_addition">
 			<h2><?php echo $this->__('Receiver Info') ?></h2>
@@ -84,36 +116,7 @@
 		</div>
 	</div>
 </div>
-	<div class="shipping_addition" style="display:none;">
-		<div class="mentioning_shops">
-			<ul class="form-list">
-				<li>
-					<?php $citys = $this->getCitys(); ?>
-					<select name="store_city" id="store_city" class="required-entry">
-						<option value=""><?php echo $this->__('Please Select City'); ?></option>
-						<?php foreach($citys as $city): ?>
-							<option value="<?php echo $city; ?>"><?php echo $city; ?></option>
-						<?php endforeach; ?>
-					</select>
-				</li>
-				<li>
-					<select name="store_area" id="store_area" class="required-entry"><option value=""><?php echo $this->__('Please Select Area'); ?></option></select>
-				</li>
-				<li>
-					<select name="store_store" id="store_store" class="required-entry"><option value=""><?php echo $this->__('Please Select Store'); ?></option></select>
-				</li>
-			</ul>			
-		</div>
-
-		
-		
-	</div>
-	
-	
-</div>
-
-<div class="content"><?php echo $this->__('Warm tips:')?><?php echo $this->__('As the quantity of the gift is changing all the time , exchanging result is only associated with the success status of the order.')?></div>
-</div>
+</script>
 
 <script type="text/javascript">
 	jQuery(document).ready(function($){
@@ -121,15 +124,16 @@
 		$('input[type="radio"][name="shipping_method"]').click(function(){
 			if($(this).val() == "shop_mentioning"){
 				$('.shipping_addition').show();
-				$(".address-list").addClass("hideme");
+				$("#custom_address_con").html("");
 			}else {
 				$('.shipping_addition').hide();
 				$(".address-list").removeClass("hideme");
+				$("#custom_address_con").append($("#tpl_custom_address").html());
 			}
 		});
 	
-	
-		$('#ship_province').change(function(){
+		
+		$('#ship_province').live("change", function () {
 			$.ajax({
 				url: '<?php echo $this->getUrl('points/checkout/PvToCity'); ?>',
 				data:{ pv : $(this).val()},
@@ -145,10 +149,9 @@
 					 alert('Some Error');
 				 }   
 			});
-		
 		});
 		
-		$('#ship_city').change(function(){
+		$('#ship_city').change("change" ,function(){
 			$.ajax({
 				url: '<?php echo $this->getUrl('points/checkout/CToArea'); ?>',
 				data:{ c : $(this).val()},
