--- a/app/design/frontend/default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/default/default/template/page/html/footer.phtml
@@ -56,10 +56,9 @@
 			    <div class="ft_list">
 				    <h2 data-title="CLUB" ><?php echo $this->__(  "VIP CLUB")?></h2>
                     <ol>
-                        <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
-                        <li><a data-title="TERMS" href='<?php echo getOfficeSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
-                        <li><a data-title="POINT CHECKING" href='<?php echo getOfficeSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
-                        <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("club_gifthis.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
+                        <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account/login")?>' index='9'><?php echo $this->__("LOGIN/REGISTER")?></a></li>
+                        <li><a data-title="TERMS" href='<?php echo getClubSiteURl("customer/account/create")?>' index='10'><?php echo $this->__("VIP TERMS")?></a></li>
+                        <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("giftproducts.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
                     </ol>
 			    </div>
 			    <div class="cs-clear cs-height-footer"></div>
@@ -131,10 +130,9 @@
             <li class='item active'>
                 <h2 data-title="LILY-CLUB"><?php echo $this->__("VIP CLUB")?></h2>
                 <ol>
-                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
-                    <li><a data-title="TERMS" href='<?php echo getOfficeSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
-                    <li><a data-title="POINT CHECKING" href='<?php echo getOfficeSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
-                    <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("club_gifthis.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
+                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account/login")?>' index='9'><?php echo $this->__("LOGIN/REGISTER")?></a></li>
+                    <li><a data-title="TERMS" href='<?php echo getClubSiteURl("customer/account/create")?>' index='10'><?php echo $this->__("VIP TERMS")?></a></li>
+                    <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("giftproducts.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
                 </ol>
             </li>
             <li class='item'>
