--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -35,7 +35,7 @@
     <div class="club_member_formte">
             <div class="club_member_rule">
                 <div class="club_tit  club_login_tit">
-                    <h2><?php echo $this->__('VIP TERMS') ?></h2>
+                    <h2><?php echo $this->__('VIP CARD TERMS') ?></h2>
                 </div>
                 <div class="club_login_txt">
                     <?php echo $this->__('Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
@@ -89,10 +89,7 @@
 
                     <div class="club_memberreg_fi cs-clear">
                         <label><?php echo $this->__('Gender') ?></label>
-                        <select name="gender" id="gender" class="club_login_ipt required-entry">
-                            <option value="123"><?php echo $this->__("Male")?></option>
-                            <option value="124"><?php echo $this->__("Female")?></option>
-                        </select>
+                        <input type="text" name="gender" id="gender" value="" title="<?php echo $this->__('Gender') ?>" class="club_login_ipt required-entry" />
 
                         <span class="club_memberreg_tips"></span>
                     </div>
